<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/layout_upload_docs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/docs_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:text="@string/docs_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/national_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docs_national_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/national_id_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/docs_national_detail" />

        <TextView
            android:id="@+id/family_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docs_family_card"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/family_card_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/docs_family_detail" />

        <TextView
            android:id="@+id/tax_payer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docs_tax_payer"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tax_payer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/docs_tax_payer_detail" />

        <TextView
            android:id="@+id/birth_certificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docs_birth_certificate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birth_certificate_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/docs_birth_detail" />

        <TextView
            android:id="@+id/police"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docs_police_report"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/police_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:text="@string/docs_police_report_detail"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/docs_type"
                android:layout_marginRight="43dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/docs_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/docs_upload"
                android:layout_marginRight="30dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/allow"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="Chose File"
                android:layout_marginRight="5dp"
                android:layout_weight="1.0"
                android:background="@color/btnUpdate"
                android:textColor="@color/textWhite"/>

            <Button
                android:id="@+id/deny"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="Save"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.0"
                android:background="@color/btnUpdate"
                android:textColor="@color/textWhite"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
